--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,6 +3,13 @@ header {
     color: #fff;
     padding: 10px 0;
   }
+
+  .logo{
+    border-radius: 40px;
+    max-width: 5rem;
+    max-height: 5rem; /* Ajustez la taille du logo selon vos besoins */
+    margin-right: 10rem; /* Espace entre le logo et les onglets */
+  }
   
   nav {
     display: flex;
