--- a/src/styles/Countries.css
+++ b/src/styles/Countries.css
@@ -1,3 +1,40 @@
-.p-orderlist-controls{
-    display: none !important;
-}
+.country-table {
+    width: 50%;
+    border-collapse: collapse;
+    margin: 20px auto;
+  }
+  
+  .country-table th, .country-table td {
+    border: 1px solid #ccc;
+    padding: 8px;
+  }
+  
+  .country-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+  }
+  
+  .country-table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  
+  .country-table tbody tr:hover {
+    background-color: #ddd;
+  }
+  
+
+.search-input {
+    padding: 8px;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .button-container {
+    margin-top: 10px;
+  }
+  
+  .button-container Button {
+    margin-right: 10px; /* Espace entre les boutons */
+  }
+  
+  
